@@ -12,6 +12,7 @@
 * Added dspu::InSampleStream class for working with audio sample in streaming manner.
 * Added dspu::Sample::load_ext and dspu::Sample::loads_ext methods for loading sample
   as a part of LSPC file when possible.
+* Added SCS_AMIN and SCS_AMAX functions for the sidechain input mode.
 
 === 1.0.6 ===
 * Fixed clang errors.
